# deltarune-fr-patcher

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
inc/: BPSParser.hpp  CRC32.hpp  globals.hpp  utils.hpp
inc/UI/: Button.hpp  ProgressBar.hpp  UpdaterWindow.hpp
src/: BPSParser.cpp  CRC32.cpp  main.cpp  utils.cpp
src/UI/: Button.cpp  ProgressBar.cpp  UpdaterWindow.cpp  UpdaterWindowInstall.cpp  UpdaterWindowUninstall.cpp
